--- a/Proje/App/App.E-Ticaret/Properties/launchSettings.json
+++ b/Proje/App/App.E-Ticaret/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:5866",
+      "applicationUrl": "https://localhost:5866",
       "sslPort": 44330
     }
   },
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5012",
+      "applicationUrl": "https://localhost:5012",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -22,7 +22,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7277;http://localhost:5012",
+      "applicationUrl": "https://localhost:7277",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
