--- a/Proje/App/App.Admin/App.Admin.csproj
+++ b/Proje/App/App.Admin/App.Admin.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.16" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\App.Data\App.Data.csproj" />
+  </ItemGroup>
+
 </Project>
